# tinygo

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: AWS-USER-GUIDE.md  REQUIREMENTS.md  TRACEABILITY-MATRIX.md  USER-STORIES.md
docs/captains_log/: 2026-03-01.md
docs/key_findings/: 20260306-Full-Repo-Review-Staff-Engineer-Panel.md
docs/pm/: BACKLOG.md  CURRENT-SPRINT.md  FRAMEWORK.md  SPRINT-LOG.md
docs/standards/: CICD-DEPLOYMENT-PROPOSAL.md  COST-MANAGEMENT-GUIDE.md  INFRASTRUCTURE-PLAYBOOK.md  MULTI-DEVELOPER-GUIDE.md  OPS-READINESS-CHECKLIST.md  SECURITY-REVIEW-PROTOCOL.md  SOLO-AI-WORKFLOW-GUIDE.md
docs/tickets/: 20260301-143357-create-ado-repo-draft.md  20260301-143402-cleanup-failed-stack-draft.md  20260301-143407-create-tinygo-account-draft.md  20260301-143412-create-permission-set-draft.md  tickets.json
infra/: template.yaml
infra/lambda_edge/: auth.py  requirements.txt
tests/: test_api.py  test_aws_cli.py  test_aws_client.py  test_bundle.py  test_config.py  test_lambda_auth.py  test_log.py
tinygo/: __init__.py  api.py  aws_cli.py  aws_client.py  bundle.py  cli.py  config.py  log.py
