[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinygo"
version = "0.5.0"
description = "CLI tool for deploying web pages to tiiny.host"
readme = "README.md"
license = "MIT"
authors = [{name = "msifoss"}]
requires-python = ">=3.9"
keywords = ["tiiny", "deploy", "hosting", "cli", "static-site"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.28"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/msifoss/tinygo"
Repository = "https://github.com/msifoss/tinygo"
Issues = "https://github.com/msifoss/tinygo/issues"
Changelog = "https://github.com/msifoss/tinygo/blob/main/CHANGELOG.md"

[project.scripts]
tinygo = "tinygo.cli:main"

[tool.setuptools.packages.find]
include = ["tinygo*"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
